create: create swiper 2nd & 3d slide

--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,4 +1,40 @@
 .hero
   &-container
-    max-width: 1283px
+    max-width: 1280px
     margin: auto
+  &__wrapper
+    border-radius: 8px
+  &__slide
+    position: relative
+  &__title
+    position: absolute
+    padding-left: 20px
+    padding-right: 15px
+    max-width: 1074px
+    color: $primary
+    font-style: normal
+    font-weight: normal
+    font-size: 48px
+    line-height: 65px
+    top: 40%
+    left: 8%
+    background: rgba(255, 255, 255, 0.76)
+    border-radius: 5px
+    margin-bottom: 20px
+  &__link
+    position: absolute
+    top: 60%
+    left: 8%
+  &__button
+    padding: 15px 30px
+    font-style: normal
+    font-weight: normal
+    font-size: 22px
+    line-height: 30px
+    color: $primary
+    background: rgba(255, 255, 255, 0.76)
+    text-decoration: underline
+    border-radius: 5px
+    cursor: pointer
+    outline: none
+    border: none
