--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ img {
 
 .swiper-container {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 750px;
+  border-radius: 8px;
 }
 
 .header {
@@ -68,7 +69,53 @@ img {
 }
 
 .hero-container {
-  max-width: 1283px;
+  max-width: 1280px;
   margin: auto;
+}
+
+.hero__wrapper {
+  border-radius: 8px;
+}
+
+.hero__slide {
+  position: relative;
+}
+
+.hero__title {
+  position: absolute;
+  padding-left: 20px;
+  padding-right: 15px;
+  max-width: 1074px;
+  color: #183B56;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 65px;
+  top: 40%;
+  left: 8%;
+  background: rgba(255, 255, 255, 0.76);
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.hero__link {
+  position: absolute;
+  top: 60%;
+  left: 8%;
+}
+
+.hero__button {
+  padding: 15px 30px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 30px;
+  color: #183B56;
+  background: rgba(255, 255, 255, 0.76);
+  text-decoration: underline;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  border: none;
 }
 /*# sourceMappingURL=style.css.map */
