--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -25,7 +25,7 @@
     position: absolute
     top: 60%
     left: 8%
-  &__button
+  &__link
     padding: 15px 30px
     font-style: normal
     font-weight: normal
