--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,6 +2,7 @@
   box-sizing: border-box
   font-family: 'Nunito', sans-serif
   margin: 0
+  font-feature-settings: "locl" 0
 
 h1, h2, h3, h4
   margin: 0
