--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,7 +1,7 @@
 .footer
   padding: 70px 0 70px 0
   background-color: $primary
-  color: #ffffff
+  color: #D8D8D8
   font-family: 'Open Sans', sans-serif
   &-container
     max-width: 1110px
@@ -14,10 +14,9 @@
       font-style: normal
       font-weight: normal
       font-size: 15px
-
       font-family: 'Open Sans', sans-serif
       text-transform: uppercase
-      margin-bottom: 20px
+      margin-bottom: 30px
   &__logo
     width: 113px
   &__icon
@@ -26,12 +25,12 @@
     flex-basis: 260px
   &__nav
     display: grid
-    grid-template-columns: repeat(3, 250px)
+    grid-template-columns: repeat(4, 25%)
+    column-gap: 15px
   &__title
     font-style: normal
     font-weight: normal
     font-size: 15px
-
     margin-bottom: 15px
     text-transform: uppercase
     letter-spacing: 0.846154px
@@ -41,7 +40,7 @@
     font-style: normal
     font-weight: lighter
     font-size: 15px
-
+    width: 260px
     margin-top: 10px
     font-family: 'Open Sans', sans-serif
   &__list
@@ -52,7 +51,6 @@
     font-style: normal
     font-weight: lighter
     font-size: 14px
-
     margin-top: 10px
     font-family: 'Open Sans', sans-serif
     margin-right: 20px
