--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -4,7 +4,7 @@
   background-repeat: no-repeat
   background-size: cover
   background-position: center
-  min-height: 500px
+  // min-height: 500px
   &-container
     margin: auto
     max-width: 350px
@@ -12,13 +12,14 @@
   &__title
     font-style: normal
     font-weight: bold
-    font-size: 30px
+    font-size: 23px
     line-height: 36px
     color: $primary
     background: rgba(255, 255, 255, 0.76)
     border-radius: 5px
     margin-bottom: 30px
     text-align: center
+    filter: drop-shadow(15px 10px 14px #183B56)
   &__link
     padding: 11px 4px
     font-style: normal
@@ -28,3 +29,4 @@
     text-decoration: none
     color: #fff
     background-color: $primary
+    // filter: drop-shadow(15px 10px 14px #183B56)
