--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,9 @@
 //variables
 @import '_variables'
 
+//подключение normalize
+@import '_normalize'
+
 //settings
 @import '_settings'
 
@@ -21,3 +24,9 @@
 
 //geography
 @import 'blocks/_footer'
+
+//mobile
+@import 'blocks/_mobile'
+
+//responsive
+@import '_media'
