--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,354 @@
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+  /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   -webkit-font-feature-settings: "locl" 0;
           font-feature-settings: "locl" 0;
+  line-height: 1.7;
 }
 
 h1, h2, h3, h4 {
@@ -16,19 +360,34 @@ img {
   width: 100%;
 }
 
+a {
+  outline: none;
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+a:hover {
+  color: #2291E5;
+}
+
 .swiper-container {
   max-width: 100%;
-  max-height: 750px;
+  height: 600px;
   border-radius: 8px;
 }
 
+.hidden {
+  overflow: hidden;
+}
+
 .header {
-  max-width: 1170px;
-  margin: auto;
   padding: 39px 0 29px 0;
 }
 
 .header-container {
+  max-width: 1170px;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -70,6 +429,10 @@ img {
   color: #183B56;
 }
 
+.menu-button {
+  display: none;
+}
+
 .hero-container {
   max-width: 1280px;
   margin: auto;
@@ -77,40 +440,88 @@ img {
 
 .hero__wrapper {
   border-radius: 8px;
+  height: 600px;
 }
 
 .hero__slide {
   position: relative;
 }
 
+.hero__slide--first {
+  background-image: url("../img/hero-bg-1.png");
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero__slide--second {
+  background-image: url("../img/hero-bg-2.jpg");
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero__slide--third {
+  background-image: url("../img/hero-bg-3.jpg");
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .hero__title {
-  position: absolute;
-  padding-left: 20px;
-  padding-right: 15px;
-  max-width: 1074px;
+  padding: 10px;
   color: #183B56;
   font-style: normal;
   font-weight: normal;
-  font-size: 48px;
-  line-height: 65px;
-  top: 40%;
-  left: 8%;
+  font-size: 30px;
   background: rgba(255, 255, 255, 0.76);
   border-radius: 5px;
   margin-bottom: 20px;
+  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
+          filter: drop-shadow(15px 10px 14px #183B56);
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.hero__title--second {
+  max-width: 700px;
+}
+
+.hero__title--third {
+  max-width: 600px;
 }
 
 .hero__link {
-  position: absolute;
-  top: 60%;
-  left: 8%;
-}
-
-.hero__link {
+  display: block;
   padding: 15px 30px;
   font-style: normal;
   font-weight: normal;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 30px;
   color: #183B56;
   background: rgba(255, 255, 255, 0.76);
@@ -119,6 +530,15 @@ img {
   cursor: pointer;
   outline: none;
   border: none;
+  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
+          filter: drop-shadow(15px 10px 14px #183B56);
+  max-width: 170px;
+  margin-left: 30px;
+}
+
+.hero__image {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .about {
@@ -136,7 +556,6 @@ img {
   font-weight: bold;
   font-size: 24px;
   line-height: 33px;
-  text-decoration: underline;
   text-transform: uppercase;
   color: #183B56;
   text-align: center;
@@ -150,9 +569,9 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .about__wrapper--images {
@@ -165,19 +584,23 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
+          filter: drop-shadow(15px 10px 14px #183B56);
 }
 
 .about__wrapper--text {
   max-width: 405px;
+  margin-right: 40px;
 }
 
 .about__description {
   font-style: normal;
   font-weight: bold;
   font-size: 21px;
-  line-height: 27px;
+  line-height: 23px;
   color: #48555B;
   margin-bottom: 30px;
+  text-align: justify;
 }
 
 .about__text {
@@ -186,6 +609,7 @@ img {
   font-size: 15px;
   line-height: 23px;
   color: #48555B;
+  text-align: justify;
 }
 
 .about__name {
@@ -195,7 +619,7 @@ img {
 
 .about__image-wrapper {
   position: relative;
-  width: 177px;
+  max-width: 177px;
   height: 224px;
   margin-right: 30px;
 }
@@ -220,7 +644,6 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  min-height: 500px;
 }
 
 .subscribe-container {
@@ -232,13 +655,15 @@ img {
 .subscribe__title {
   font-style: normal;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 23px;
   line-height: 36px;
   color: #183B56;
   background: rgba(255, 255, 255, 0.76);
   border-radius: 5px;
   margin-bottom: 30px;
   text-align: center;
+  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
+          filter: drop-shadow(15px 10px 14px #183B56);
 }
 
 .subscribe__link {
@@ -267,14 +692,13 @@ img {
   font-weight: bold;
   font-size: 24px;
   color: #183B56;
-  text-decoration: underline;
   margin-bottom: 20px;
 }
 
 .footer {
   padding: 70px 0 70px 0;
   background-color: #183B56;
-  color: #ffffff;
+  color: #D8D8D8;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -301,7 +725,7 @@ img {
   font-size: 15px;
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .footer__logo {
@@ -320,8 +744,10 @@ img {
 .footer__nav {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (250px)[3];
-      grid-template-columns: repeat(3, 250px);
+  -ms-grid-columns: (25%)[4];
+      grid-template-columns: repeat(4, 25%);
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
 }
 
 .footer__title {
@@ -339,6 +765,7 @@ img {
   font-style: normal;
   font-weight: lighter;
   font-size: 15px;
+  width: 260px;
   margin-top: 10px;
   font-family: 'Open Sans', sans-serif;
 }
@@ -370,5 +797,319 @@ img {
   text-decoration: none;
   font-family: 'Open Sans', sans-serif;
   cursor: pointer;
+}
+
+.mobile {
+  padding: 36px 24px;
+  position: fixed;
+  z-index: 200;
+  top: 0px;
+  right: 0;
+  left: 0;
+  visibility: hidden;
+  width: 100%;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
+          box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
+  overflow: hidden;
+}
+
+.mobile--visible {
+  visibility: visible;
+  overflow: auto;
+}
+
+.mobile__link {
+  color: #183B56;
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+
+.mobile__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.mobile__image {
+  position: absolute;
+  width: 24px;
+  right: 16px;
+  top: 12px;
+}
+
+@media (max-width: 1200px) {
+  .header-container,
+  .hero-container,
+  .about-container,
+  .geography-container,
+  .footer-container {
+    max-width: 92%;
+  }
+  .hero__title {
+    font-size: 30px;
+  }
+  .hero__link {
+    padding: 8px 18px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header-container,
+  .hero-container,
+  .about-container,
+  .geography-container,
+  .footer-container {
+    max-width: 90%;
+  }
+  .header__logo {
+    width: 140px;
+    height: 58px;
+  }
+  .navbar__list {
+    font-size: 14px;
+  }
+  .hero__title {
+    font-size: 25px;
+  }
+  .hero__link {
+    padding: 8px 18px;
+    font-size: 15px;
+  }
+  .hero__container {
+    height: 500px;
+  }
+  .about__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about__wrapper--text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 100%;
+    margin-right: 0;
+  }
+  .about__wrapper--images {
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 30px;
+  }
+  .about__description {
+    margin-right: 40px;
+    font-size: 18px;
+  }
+  .footer__nav {
+    -ms-grid-columns: (50%)[2];
+        grid-template-columns: repeat(2, 50%);
+    row-gap: 40px;
+  }
+  .footer__text {
+    font-size: 13px;
+    width: 300px;
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-top: 100px;
+  }
+  .header {
+    padding: 20px 0 20px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background-color: #fff;
+  }
+  .header__logo {
+    width: 100px;
+    height: 40px;
+  }
+  .navbar__list {
+    font-size: 13px;
+    display: none;
+  }
+  .menu-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 16px;
+    height: 11px;
+    padding: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    background-color: #fff;
+  }
+  .menu-button--line {
+    background-color: #183B56;
+    width: 16px;
+    height: 1px;
+  }
+  .hero__title {
+    font-size: 25px;
+  }
+  .hero__link {
+    padding: 6px 16px;
+    font-size: 13px;
+    max-width: 130px;
+  }
+  .about {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .about__title {
+    font-size: 22px;
+  }
+  .about__description {
+    font-size: 16px;
+  }
+  .about__text {
+    font-size: 12px;
+  }
+  .about__image-wrapper {
+    max-width: 140px;
+    height: 200px;
+  }
+  .about__link {
+    font-size: 19px;
+  }
+  .subscribe__title {
+    font-size: 25px;
+  }
+  .subscribe__link {
+    padding: 9px 2px;
+    font-size: 10px;
+  }
+  .geography__title {
+    font-size: 22px;
+  }
+  .footer__text {
+    max-width: 260px;
+  }
+}
+
+@media (max-width: 576px) {
+  .hero__title {
+    font-size: 18px;
+  }
+  .hero__link {
+    padding: 4px 12px;
+    font-size: 10px;
+  }
+  .hero__container {
+    height: 350px;
+  }
+  .hero__image {
+    height: 500px;
+  }
+  .about__title {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  .about__description {
+    font-size: 12px;
+  }
+  .about__text {
+    font-size: 10px;
+  }
+  .about__link {
+    font-size: 16px;
+  }
+  .about__image-wrapper {
+    max-width: 120px;
+    height: 180px;
+  }
+  .geography__title {
+    font-size: 18px;
+  }
+  .footer__menu-title {
+    font-size: 14px;
+  }
+  .footer__item {
+    font-size: 12px;
+  }
+  .footer__text {
+    font-size: 12px;
+    max-width: 230px;
+  }
+}
+
+@media (max-height: 487px) {
+  .mobile {
+    overflow: auto;
+    max-height: 100%;
+  }
+}
+
+@media (max-width: 476px) {
+  .footer__nav {
+    -ms-grid-columns: (250px)[1];
+        grid-template-columns: repeat(1, 250px);
+    row-gap: 40px;
+  }
+}
+
+@media (max-width: 390px) {
+  .header__logo {
+    width: 80px;
+    height: 30px;
+  }
+  .hero__swiper-button {
+    width: 10px;
+    height: 10px;
+  }
+  .hero__title {
+    font-size: 15px;
+  }
+  .hero__link {
+    padding: 2px 6px;
+    font-size: 10px;
+    max-width: 100px;
+  }
+  .about__description {
+    margin-right: 0;
+  }
+  .about__wrapper--text {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .about__link {
+    font-size: 11px;
+    top: 5px;
+    left: 3px;
+  }
+  .about__image-wrapper {
+    margin-right: 15px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
