--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,8 +1,9 @@
 *
   box-sizing: border-box
-  font-family: 'Nunito', sans-serif
+  font-family: 'Open Sans', sans-serif
   margin: 0
   font-feature-settings: "locl" 0
+  line-height: 1.7
 
 h1, h2, h3, h4
   margin: 0
@@ -11,7 +12,16 @@ h1, h2, h3, h4
 img
   width: 100%
 
+a
+  outline: none
+  cursor: pointer
+  transition: 0.4s
+  &:hover
+    color: #2291E5
 .swiper-container
   max-width: 100%
-  max-height: 750px
+  height: 600px
   border-radius: 8px
+
+.hidden
+  overflow: hidden
