--- a/sass/blocks/_geography.sass
+++ b/sass/blocks/_geography.sass
@@ -9,5 +9,5 @@
     font-weight: bold
     font-size: 24px
     color: $primary
-    text-decoration: underline
+    // text-decoration: underline
     margin-bottom: 20px
