--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,8 +1,8 @@
 .header
-  max-width: 1170px
-  margin: auto
   padding: 39px 0 29px 0
   &-container
+    max-width: 1170px
+    margin: auto
     display: flex
     justify-content: space-between
     align-items: center
@@ -23,3 +23,5 @@
   &__link
     text-decoration: none
     color: $primary
+.menu-button
+  display: none
