--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -4,32 +4,53 @@
     margin: auto
   &__wrapper
     border-radius: 8px
+    height: 600px
   &__slide
     position: relative
+    &--first
+      background-image: url('../img/hero-bg-1.png')
+      background-size: cover
+      display: flex
+      flex-direction: column
+      justify-content: center
+
+    &--second
+      background-image: url('../img/hero-bg-2.jpg')
+      background-size: cover
+      background-position: center
+      display: flex
+      flex-direction: column
+      justify-content: center
+    &--third
+      background-image: url('../img/hero-bg-3.jpg')
+      background-size: cover
+      display: flex
+      flex-direction: column
+      justify-content: center
   &__title
-    position: absolute
-    padding-left: 20px
-    padding-right: 15px
-    max-width: 1074px
+    padding: 10px
     color: $primary
     font-style: normal
     font-weight: normal
-    font-size: 48px
-    line-height: 65px
-    top: 40%
-    left: 8%
+    font-size: 30px
     background: rgba(255, 255, 255, 0.76)
     border-radius: 5px
     margin-bottom: 20px
+    filter: drop-shadow(15px 10px 14px #183B56)
+    margin-left: 30px
+    margin-right: 30px
+    &--first
+
+    &--second
+      max-width: 700px
+    &--third
+      max-width: 600px
   &__link
-    position: absolute
-    top: 60%
-    left: 8%
-  &__link
+    display: block
     padding: 15px 30px
     font-style: normal
     font-weight: normal
-    font-size: 22px
+    font-size: 18px
     line-height: 30px
     color: $primary
     background: rgba(255, 255, 255, 0.76)
@@ -38,3 +59,9 @@
     cursor: pointer
     outline: none
     border: none
+    filter: drop-shadow(15px 10px 14px #183B56)
+    max-width: 170px
+    margin-left: 30px
+  &__image
+    object-fit: cover
+    // height: 700px
