--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,5 +1,5 @@
 .header
-  padding: 39px 0 29px 0
+  padding: 25px 0 25px 0
   &-container
     max-width: 1170px
     margin: auto
@@ -10,6 +10,7 @@
     width: 175px
     height: 80px
 .navbar
+  position: relative
   &__list
     margin: 0
     padding: 0
@@ -23,5 +24,7 @@
   &__link
     text-decoration: none
     color: $primary
+    font-size: 14px
+
 .menu-button
   display: none
