--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,5 +28,17 @@
 //mobile
 @import 'blocks/_mobile'
 
+//mobile
+@import 'blocks/_breadcrumb'
+
+//main-info
+@import 'blocks/_main-info'
+
+//styles for grp, msi and svan
+@import 'blocks/_method'
+
+//styles for contact-page
+@import 'blocks/_contacts'
+
 //responsive
 @import '_media'
