--- a/css/style.css
+++ b/css/style.css
@@ -360,17 +360,6 @@ img {
   width: 100%;
 }
 
-a {
-  outline: none;
-  cursor: pointer;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-a:hover {
-  color: #2291E5;
-}
-
 .swiper-container {
   max-width: 100%;
   height: 600px;
@@ -381,8 +370,40 @@ a:hover {
   overflow: hidden;
 }
 
+@media screen and (min-width: 992px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    outline: none;
+    cursor: pointer;
+    color: white;
+  }
+  .swiper-button-next:hover,
+  .swiper-button-prev:hover {
+    color: #183B56;
+    -webkit-box-shadow: 0 0 12px white;
+            box-shadow: 0 0 12px white;
+  }
+  a {
+    outline: none;
+    cursor: pointer;
+  }
+  a:hover {
+    color: #2291E5;
+  }
+  button {
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  button:hover, button:focus {
+    outline: none;
+    -webkit-box-shadow: 0 0 12px white;
+            box-shadow: 0 0 12px white;
+    color: #fff;
+  }
+}
+
 .header {
-  padding: 39px 0 29px 0;
+  padding: 25px 0 25px 0;
 }
 
 .header-container {
@@ -402,6 +423,10 @@ a:hover {
 .header__logo {
   width: 175px;
   height: 80px;
+}
+
+.navbar {
+  position: relative;
 }
 
 .navbar__list {
@@ -427,6 +452,7 @@ a:hover {
 .navbar__link {
   text-decoration: none;
   color: #183B56;
+  font-size: 14px;
 }
 
 .menu-button {
@@ -434,7 +460,7 @@ a:hover {
 }
 
 .hero-container {
-  max-width: 1280px;
+  max-width: 1250px;
   margin: auto;
 }
 
@@ -445,6 +471,19 @@ a:hover {
 
 .hero__slide {
   position: relative;
+}
+
+.hero__slide::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 15;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(151, 151, 151, 0.32);
 }
 
 .hero__slide--first {
@@ -494,51 +533,40 @@ a:hover {
 }
 
 .hero__title {
-  padding: 10px;
-  color: #183B56;
+  position: relative;
+  z-index: 50;
+  padding: 5px;
+  color: #fff;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 600;
   font-size: 30px;
-  background: rgba(255, 255, 255, 0.76);
-  border-radius: 5px;
+  border-bottom: 1px solid;
+  border-color: rgba(255, 255, 255, 0.3);
   margin-bottom: 20px;
-  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
-          filter: drop-shadow(15px 10px 14px #183B56);
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.hero__title--second {
-  max-width: 700px;
-}
-
-.hero__title--third {
-  max-width: 600px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .hero__link {
+  position: relative;
+  z-index: 50;
   display: block;
-  padding: 15px 30px;
+  padding: 10px;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 30px;
-  color: #183B56;
-  background: rgba(255, 255, 255, 0.76);
+  color: white;
   text-decoration: underline;
-  border-radius: 5px;
   cursor: pointer;
   outline: none;
-  border: none;
-  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
-          filter: drop-shadow(15px 10px 14px #183B56);
+  border-radius: 4px;
+  border-width: 0.1px;
+  border-color: #fff;
   max-width: 170px;
-  margin-left: 30px;
-}
-
-.hero__image {
-  -o-object-fit: cover;
-     object-fit: cover;
+  margin-left: 50px;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .about {
@@ -584,8 +612,6 @@ a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
-          filter: drop-shadow(15px 10px 14px #183B56);
 }
 
 .about__wrapper--text {
@@ -597,19 +623,18 @@ a:hover {
   font-style: normal;
   font-weight: bold;
   font-size: 21px;
-  line-height: 23px;
   color: #48555B;
   margin-bottom: 30px;
-  text-align: justify;
+  text-align: left;
+  min-width: 50%;
 }
 
 .about__text {
   font-style: normal;
   font-weight: normal;
   font-size: 15px;
-  line-height: 23px;
   color: #48555B;
-  text-align: justify;
+  text-justify: distribute;
 }
 
 .about__name {
@@ -624,6 +649,10 @@ a:hover {
   margin-right: 30px;
 }
 
+.about__image-wrapper:last-child {
+  margin-right: 0;
+}
+
 .about__link {
   position: absolute;
   top: 25px;
@@ -636,6 +665,11 @@ a:hover {
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
+}
+
+.about__link:hover {
+  color: #fff;
+  text-shadow: 0 0 12px rgba(255, 255, 255, 0.8);
 }
 
 .subscribe {
@@ -653,6 +687,7 @@ a:hover {
 }
 
 .subscribe__title {
+  padding: 5px;
   font-style: normal;
   font-weight: bold;
   font-size: 23px;
@@ -703,7 +738,7 @@ a:hover {
 }
 
 .footer-container {
-  max-width: 1110px;
+  max-width: 1170px;
   margin: auto;
 }
 
@@ -737,8 +772,8 @@ a:hover {
 }
 
 .footer__info {
-  -ms-flex-preferred-size: 260px;
-      flex-basis: 260px;
+  -ms-flex-preferred-size: 250px;
+      flex-basis: 250px;
 }
 
 .footer__nav {
@@ -850,12 +885,429 @@ a:hover {
   top: 12px;
 }
 
+.breadcrumb-container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+.breadcrumb-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  padding: 15px 0;
+  margin: 0;
+}
+
+.breadcrumb-list__item {
+  font-size: 12px;
+  line-height: 13px;
+}
+
+.breadcrumb-list__item:not(:last-child)::after {
+  content: '/';
+  margin-right: 4px;
+}
+
+.breadcrumb-list__link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.main-info {
+  padding-top: 20px;
+  padding-bottom: 70px;
+}
+
+.main-info__container {
+  max-width: 1170px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.main-info__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  text-transform: uppercase;
+  color: #183B56;
+  margin-bottom: 30px;
+  border-bottom: 1px solid;
+  border-color: rgba(25, 60, 88, 0.2);
+}
+
+.main-info__title--little {
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.main-info__greetings {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #183B56;
+}
+
+.main-info__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #48555B;
+  text-align: left;
+  margin-top: 30px;
+}
+
+.main-info__right-side {
+  margin-top: -14px;
+  max-width: 350px;
+  margin-left: 40px;
+  background-color: #fafafa;
+  color: #333333;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(151, 151, 151, 0.32);
+  border-radius: 3px;
+  padding: 18px;
+}
+
+.main-info__bold {
+  font-weight: 600;
+}
+
+.main-info__employe-wrapper {
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 60px;
+  margin-top: 40px;
+  border: 1px solid #A7211D;
+  background-color: #fafafa;
+}
+
+.main-info__employe-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #48555B;
+  margin-top: 20px;
+}
+
+.main-info__numbers {
+  color: #A7211D;
+  font-weight: 600;
+  font-size: 30px;
+}
+
+.main-info__numbers:hover {
+  text-shadow: 0 0 12px #A7211D;
+}
+
+.method {
+  padding-top: 10px;
+  padding-bottom: 30px;
+}
+
+.method__container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+.method__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 23px;
+  text-transform: uppercase;
+  color: #183B56;
+  text-align: center;
+  border-bottom: 1px solid;
+  border-color: rgba(25, 60, 88, 0.2);
+}
+
+.method__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #48555B;
+  margin-left: 215px;
+  padding: 20px;
+}
+
+#tabs {
+  margin: 10px 0;
+  overflow: hidden;
+}
+
+.tabs-nav {
+  width: 215px;
+  float: left;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.tabs-nav:after {
+  content: '';
+  display: inline-block;
+  width: 1px;
+  height: 1px;
+  background: #ccc;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+.tabs-nav__li {
+  display: block;
+  padding: 0;
+  margin: 0;
+}
+
+.tabs-nav__a {
+  display: block;
+  padding: 10px 20px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-top: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  background: #fbfbfb;
+  font-size: 16px;
+  text-decoration: none;
+  color: #999;
+}
+
+.tabs-nav li:first-child a {
+  border-radius: 5px 0 0 0;
+}
+
+.tabs-nav li:last-child a {
+  border-bottom: 1px solid #ccc;
+  border-radius: 0 0 0 5px;
+}
+
+.tabs-nav a.active {
+  background: #fff;
+  color: #fff;
+  background-color: #183B56;
+}
+
+.tabs-nav .tabs-items {
+  margin-left: 149px;
+  background: #fff;
+}
+
+.tabs-item {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 0 5px 5px 0;
+  min-height: 145px;
+}
+
+.contacts {
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
+.contacts-container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+.contacts__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  text-transform: uppercase;
+  color: #183B56;
+  margin-bottom: 20px;
+  border-bottom: 1px solid;
+  border-color: rgba(25, 60, 88, 0.2);
+}
+
+.contacts__title--little {
+  font-size: 18px;
+  display: inline;
+}
+
+.contacts__adress {
+  background-color: #fafafa;
+  color: #333333;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgba(151, 151, 151, 0.32);
+  padding: 10px;
+}
+
+.contacts__adress-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contacts__text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  color: #48555B;
+  margin-top: 20px;
+}
+
+.contacts__link {
+  margin-top: 20px;
+  text-decoration: none;
+  color: #183B56;
+  font-size: 16px;
+}
+
+.contacts__form {
+  margin-top: 30px;
+  max-width: 539px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 20px;
+  border: 1px solid rgba(25, 60, 88, 0.2);
+  margin-top: 30px;
+  gap: 19px;
+  background-color: #fafafa;
+}
+
+.contacts__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.contacts__input-group {
+  margin-bottom: 5px;
+  -ms-flex-preferred-size: 48%;
+      flex-basis: 48%;
+}
+
+.contacts__input-group:hover {
+  -webkit-box-shadow: 0 0 12px #183B56;
+          box-shadow: 0 0 12px #183B56;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.contacts__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.contacts__message {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  height: 123px;
+  padding: 18px 23px;
+  resize: none;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 15px;
+  outline: none;
+}
+
+.contacts__input {
+  padding: 12px 18px;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 15px;
+  outline: none;
+  width: 100%;
+}
+
+.contacts__button {
+  min-width: 160px;
+  max-height: 50px;
+  padding: 14px;
+  background-color: transparent;
+  color: #183B56;
+  border-radius: 4px;
+  border-color: #193c58;
+  border: 1px solid;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  outline: none;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.contacts__button:hover {
+  -webkit-box-shadow: 0 0 12px rgba(25, 60, 88, 0.8);
+          box-shadow: 0 0 12px rgba(25, 60, 88, 0.8);
+  color: #183B56;
+}
+
+.map {
+  width: 450px;
+  height: 280px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-top: 30px;
+}
+
+.map__frame {
+  width: 100%;
+  border: none;
+}
+
 @media (max-width: 1200px) {
   .header-container,
   .hero-container,
   .about-container,
   .geography-container,
-  .footer-container {
+  .footer-container,
+  .breadcrumb-container,
+  .main-info__container,
+  .contacts-container {
     max-width: 92%;
   }
   .hero__title {
@@ -872,7 +1324,10 @@ a:hover {
   .hero-container,
   .about-container,
   .geography-container,
-  .footer-container {
+  .footer-container,
+  .breadcrumb-container,
+  .main-info__container,
+  .contacts-container {
     max-width: 90%;
   }
   .header__logo {
@@ -970,7 +1425,7 @@ a:hover {
     outline: none;
     background-color: #fff;
   }
-  .menu-button--line {
+  .menu-button__line {
     background-color: #183B56;
     width: 16px;
     height: 1px;
@@ -991,7 +1446,7 @@ a:hover {
     font-size: 22px;
   }
   .about__description {
-    font-size: 16px;
+    font-size: 15px;
   }
   .about__text {
     font-size: 12px;
@@ -1016,11 +1471,27 @@ a:hover {
   .footer__text {
     max-width: 260px;
   }
+  .main-info__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main-info__right-side {
+    margin-top: 20px;
+    margin-left: 0;
+    min-width: 100%;
+  }
+  .main-info__employe-text {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 576px) {
   .hero__title {
     font-size: 18px;
+    margin-left: 25px;
+    margin-right: 25px;
   }
   .hero__link {
     padding: 4px 12px;
@@ -1062,6 +1533,9 @@ a:hover {
     font-size: 12px;
     max-width: 230px;
   }
+  .main-info__employe-wrapper {
+    gap: 20px;
+  }
 }
 
 @media (max-height: 487px) {
@@ -1083,6 +1557,10 @@ a:hover {
   .header__logo {
     width: 80px;
     height: 30px;
+  }
+  .hero {
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
   .hero__swiper-button {
     width: 10px;
@@ -1110,6 +1588,9 @@ a:hover {
   }
   .about__image-wrapper {
     margin-right: 15px;
+  }
+  .main-info {
+    padding-top: 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
