--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,12 +12,6 @@ h1, h2, h3, h4
 img
   width: 100%
 
-a
-  outline: none
-  cursor: pointer
-  transition: 0.4s
-  &:hover
-    color: #2291E5
 .swiper-container
   max-width: 100%
   height: 600px
@@ -25,3 +19,26 @@ a
 
 .hidden
   overflow: hidden
+
+@media screen and ( min-width: 992px )
+  .swiper-button-next,
+  .swiper-button-prev
+    outline: none
+    cursor: pointer
+    color: hsla(0,0%,100%,1)
+    // transition: 0.4s
+    &:hover
+      color: $primary
+      box-shadow: 0 0 12px hsla(0,0%,100%,1)
+  a
+    outline: none
+    cursor: pointer
+    // transition: 0.4s
+    &:hover
+      color: #2291E5
+  button
+    transition: 0.4s
+    &:hover, &:focus
+      outline: none
+      box-shadow: 0 0 12px hsla(0,0%,100%,1)
+      color: #fff
