--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -9,7 +9,6 @@
     font-weight: bold
     font-size: 24px
     line-height: 33px
-    // text-decoration: underline
     text-transform: uppercase
     color: $primary
     text-align: center
@@ -22,7 +21,7 @@
       display: flex
       justify-content: space-between
       align-items: center
-      filter: drop-shadow(15px 10px 14px #183B56)
+      // filter: drop-shadow(15px 10px 14px #183B56)
     &--text
       max-width: 405px
       margin-right: 40px
@@ -30,17 +29,16 @@
     font-style: normal
     font-weight: bold
     font-size: 21px
-    line-height: 23px
     color: #48555B
     margin-bottom: 30px
-    text-align: justify
+    text-align: left
+    min-width: 50%
   &__text
     font-style: normal
     font-weight: normal
     font-size: 15px
-    line-height: 23px
     color: #48555B
-    text-align: justify
+    text-justify: distribute
   &__name
     color: #2291E6
     text-transform: uppercase
@@ -50,6 +48,8 @@
       max-width: 177px
       height: 224px
       margin-right: 30px
+      &:last-child
+        margin-right: 0
   &__link
     position: absolute
     top: 25px
@@ -62,3 +62,6 @@
     text-transform: uppercase
     text-decoration: none
     cursor: pointer
+    &:hover
+      color: #fff
+      text-shadow: 0 0 12px hsla(0,0%,100%,.8)
