--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,19 +1,29 @@
 .hero
   &-container
-    max-width: 1280px
+    max-width: 1250px
     margin: auto
   &__wrapper
     border-radius: 8px
     height: 600px
   &__slide
     position: relative
+    &::after
+      content: ''
+      position: absolute
+      width: 100%
+      height: 100%
+      z-index: 15
+      top: 0
+      right: 0
+      bottom: 0
+      left: 0
+      background: rgba(151, 151, 151, 0.32)
     &--first
       background-image: url('../img/hero-bg-1.png')
       background-size: cover
       display: flex
       flex-direction: column
       justify-content: center
-
     &--second
       background-image: url('../img/hero-bg-2.jpg')
       background-size: cover
@@ -27,41 +37,38 @@
       display: flex
       flex-direction: column
       justify-content: center
-  &__title
-    padding: 10px
-    color: $primary
-    font-style: normal
-    font-weight: normal
-    font-size: 30px
-    background: rgba(255, 255, 255, 0.76)
-    border-radius: 5px
-    margin-bottom: 20px
-    filter: drop-shadow(15px 10px 14px #183B56)
-    margin-left: 30px
-    margin-right: 30px
-    &--first
 
-    &--second
-      max-width: 700px
-    &--third
-      max-width: 600px
+  &__title
+    position: relative
+    z-index: 50
+    padding: 5px
+    color: #fff
+    font-style: normal
+    font-weight: 600
+    font-size: 30px
+    border-bottom: 1px solid
+    border-color: hsla(0,0%,100%,.3)
+    margin-bottom: 20px
+    // filter: drop-shadow(15px 10px 14px #183B56)
+    margin-left: 50px
+    margin-right: 50px
+
   &__link
+    position: relative
+    z-index: 50
     display: block
-    padding: 15px 30px
+    padding: 10px
     font-style: normal
     font-weight: normal
     font-size: 18px
-    line-height: 30px
-    color: $primary
-    background: rgba(255, 255, 255, 0.76)
+    color: hsla(0,0%,100%,1)
     text-decoration: underline
-    border-radius: 5px
     cursor: pointer
     outline: none
-    border: none
-    filter: drop-shadow(15px 10px 14px #183B56)
+    border-radius: 4px
+    border-width: 0.1px
+    border-color: #fff
     max-width: 170px
-    margin-left: 30px
-  &__image
-    object-fit: cover
-    // height: 700px
+    margin-left: 50px
+    background-color: transparent
+    box-shadow: none
