--- a/sass/blocks/_subscribe.sass
+++ b/sass/blocks/_subscribe.sass
@@ -9,7 +9,9 @@
     margin: auto
     max-width: 350px
     text-align: center
+
   &__title
+    padding: 5px
     font-style: normal
     font-weight: bold
     font-size: 23px
