--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,7 @@
     max-width: 92%
   .hero
     &__title
-      font-size: 30px
+      // font-size: 30px
     &__link
       padding: 8px 18px
       font-size: 15px
@@ -27,7 +27,7 @@
     max-width: 90%
   .header
     &__logo
-      width: 140px
+      width: 125px
       height: 58px
   .navbar
     &__list
@@ -51,7 +51,7 @@
       &--images
         width: 100%
         justify-content: center
-        margin-top: 30px
+        margin-top: 50px
     &__description
       margin-right: 40px
       font-size: 18px
@@ -61,11 +61,19 @@
       row-gap: 40px
     &__text
       font-size: 13px
-      width: 300px
-
+      width: 330px
+  .contacts
+    &__form
+      max-width: 50%
+    &__input-group
+      flex-basis: 100%
+    &__text, &__link
+      font-size: 12px
+  .map
+    height: 350px
 @media (max-width: 767px)
   body
-    padding-top: 100px
+    padding-top: 80px
   .header
     padding: 20px 0 20px 0
     position: fixed
@@ -101,7 +109,7 @@
   .hero
     &__title
       // max-width: 560px
-      font-size: 25px
+      font-size: 22px
     &__link
       padding: 6px 16px
       font-size: 13px
@@ -110,7 +118,7 @@
     padding-top: 50px
     padding-bottom: 50px
     &__title
-      font-size: 22px
+      font-size: 20px
     &__description
       font-size: 15px
     &__text
@@ -120,17 +128,17 @@
         max-width: 140px
         height: 200px
     &__link
-      font-size: 19px
+      font-size: 12px
 
   .subscribe
     &__title
-      font-size: 25px
+      font-size: 20px
     &__link
       padding: 9px 2px
       font-size: 10px
   .geography
     &__title
-      font-size: 22px
+      font-size: 20px
 
   .footer
     &__text
@@ -144,6 +152,23 @@
       min-width: 100%
     &__employe-text
       font-size: 18px
+  .contacts
+    &__title
+      font-size: 22px
+      &--little
+        font-size: 18px
+    &__content
+      flex-wrap: wrap
+      padding-left: 20px
+      padding-right: 20px
+    &__form
+      max-width: 100%
+      margin-right: 0
+    &__address
+      &-wrapper
+        justify-content: space-evenly
+  .map
+    width: 100%
 @media ( max-width: 576px )
   .hero
     &__title
@@ -186,6 +211,9 @@
     &__employe
       &-wrapper
         gap: 20px
+  .contacts
+    padding-top: 10px
+
 @media ( max-height: 487px )
   .mobile
     overflow: auto
@@ -196,7 +224,21 @@
     &__nav
       grid-template-columns: repeat(1, 250px)
       row-gap: 40px
-
+  .contacts
+    &__title
+      font-size: 18px
+      &--little
+        font-size: 14px
+    &__input
+      font-size: 12px
+    &__message
+      font-size: 12px
+    &__button
+      padding: 10px
+      min-width: 120px
+      font-size: 10px
+    &__info
+      font-size: 10px
 @media ( max-width: 390px )
   .header
     &__logo
@@ -229,3 +271,10 @@
         margin-right: 15px
   .main-info
     padding-top: 0
+  .contacts
+    &__container
+      flex-wrap: wrap
+    &__button
+      margin-bottom: 10px
+  .map
+    height: 250px
