--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,6 +5,10 @@
   font-feature-settings: "locl" 0
   line-height: 1.7
 
+body
+  // background-color: rgba(236,240,241,.2)
+  background-color: rgba(191,191,191,.2)
+
 h1, h2, h3, h4
   margin: 0
   padding: 0
@@ -14,12 +18,13 @@ img
 
 .swiper-container
   max-width: 100%
-  height: 600px
+  height: 450px
   border-radius: 8px
 
 .hidden
   overflow: hidden
-
+.hidden-1
+  display: none
 @media screen and ( min-width: 992px )
   .swiper-button-next,
   .swiper-button-prev
