--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -7,12 +7,16 @@
   &__title
     font-style: normal
     font-weight: bold
-    font-size: 24px
+    font-size: 22px
     line-height: 33px
     text-transform: uppercase
     color: $primary
     text-align: center
+    margin: auto
     margin-bottom: 50px
+    border-bottom: 1px solid hsla(206, 56, 22 , .3 )
+    max-width: 170px
+
   &__wrapper
     display: flex
     justify-content: space-between
@@ -21,14 +25,13 @@
       display: flex
       justify-content: space-between
       align-items: center
-      // filter: drop-shadow(15px 10px 14px #183B56)
     &--text
       max-width: 405px
       margin-right: 40px
   &__description
     font-style: normal
     font-weight: bold
-    font-size: 21px
+    font-size: 18px
     color: #48555B
     margin-bottom: 30px
     text-align: left
@@ -57,8 +60,8 @@
     color: #fff
     font-style: normal
     font-weight: 800
-    font-size: 24px
-    line-height: 29px
+    font-size: 14px
+    // line-height: 29px
     text-transform: uppercase
     text-decoration: none
     cursor: pointer
