--- a/sass/blocks/_contacts.sass
+++ b/sass/blocks/_contacts.sass
@@ -4,9 +4,6 @@
   &-container
     max-width: 1170px
     margin: auto
-    // display: flex
-    // width: 100%
-    // flex-wrap: wrap
   &__title
     font-style: normal
     font-weight: bold
@@ -17,33 +14,45 @@
     border-bottom: 1px solid
     border-color: hsla(206, 56, 22, .2)
     &--little
+      max-width: 150px
       font-size: 18px
+      font-weight: 400
       display: inline
-  &__adress
-    background-color: rgb(250, 250, 250)
-    color: rgb(51, 51, 51)
-    border-width: 1px
-    border-style: solid
-    border-color: rgba(151, 151, 151, 0.32)
-    padding: 10px
+      color: $primary
+      border-bottom: 1px solid hsla(206, 56, 22, .2)
+  &__icon
+    width: 30px
+    filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%)
+  &__map-blocks
+    flex-basis: 50%
+  &__blocks
+    padding: 20px
+    display: flex
+    flex-wrap: wrap
+    align-items: baseline
+    height: 250px
+    border: 1px solid hsla(206, 56, 22, 0.2)
+    border-radius: 4px
+    background-color: rgba(250, 250, 250, 0.7)
     &-wrapper
       display: flex
-      justify-content: space-between
-      width: 100%
-      align-items: flex-start
-      flex-wrap: wrap
+      flex-direction: column
+      flex-basis: 50%
+      margin-bottom: 20px
+
   &__text
     font-style: normal
     font-weight: normal
-    font-size: 16px
-    color: #48555B
+    font-size: 14px
+    color: $primary
     margin-top: 20px
   &__link
     margin-top: 20px
     text-decoration: none
     color: $primary
-    font-size: 16px
+    font-size: 14px
   &__form
+    height: 100%
     margin-top: 30px
     max-width: 539px
     display: flex
@@ -52,28 +61,31 @@
     border: 1px solid hsla(206, 56, 22, 0.2)
     margin-top: 30px
     gap: 19px
-    background-color: rgb(250, 250, 250)
+    background-color: rgba(250, 250, 250, 0.7)
+    margin-right: 20px
+    border-radius: 4px
   &__content
     display: flex
-    align-items: center
-    width: 100%
+    align-items: flex-start
     justify-content: space-between
-    flex-wrap: wrap
+    gap: 20px
   &__input-group
     margin-bottom: 5px
     flex-basis: 48%
     &:hover
-      box-shadow: 0 0 12px $primary
+      box-shadow: 0 0 7px $primary
       transition: 0.3s
   &__container
     display: flex
     align-items: center
     justify-content: space-between
     flex-basis: 100%
-
+  &__form-group
+    flex-basis: 50%
+    height: 450px
   &__message
     flex-basis: 100%
-    height: 123px
+    height: 262px
     padding: 18px 23px
     resize: none
     border-radius: 4px
@@ -82,8 +94,12 @@
     font-size: 14px
     line-height: 15px
     outline: none
+    border: 1px solid hsla(206, 56, 22, 0.2)
+    background-color: transparent
+    &:hover
+      background-color: #fff
   &__input
-    padding: 12px 18px
+    padding: 20px 18px
     border-radius: 4px
     font-style: normal
     font-weight: normal
@@ -91,6 +107,10 @@
     line-height: 15px
     outline: none
     width: 100%
+    border: 1px solid hsla(206, 56, 22, 0.2)
+    background-color: transparent
+    &:hover
+      background-color: #fff
   &__button
     min-width: 160px
     max-height: 50px
@@ -98,25 +118,27 @@
     background-color: transparent
     color: $primary
     border-radius: 4px
-    border-color: hsla(206, 56, 22, 1)
-    border: 1px solid
+    border-color: hsla(206, 56, 22, 0.2)
+    // border: 1px solid
     font-style: normal
     font-weight: bold
     font-size: 12px
-    // line-height: 15px
     outline: none
     cursor: pointer
     white-space: nowrap
     &:hover
-      box-shadow: 0 0 12px hsla(206, 56, 22, 0.8 )
+      box-shadow: 0 0 12px hsla(206, 56, 22, 1 )
       color: $primary
-
+  &__info
+    font-size: 12px
+    color: $primary
 .map
-  width: 450px
-  height: 280px
-  border-radius: 10px
+  // width: 50%
+  height: 250px
+  border-radius: 4px
   overflow: hidden
   margin-top: 30px
+  border: 1px solid hsla(206, 56, 22, .3)
   &__frame
     width: 100%
     border: none
