--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,5 +1,5 @@
 .header
-  padding: 25px 0 25px 0
+  padding: 25px 0 15px 0
   &-container
     max-width: 1170px
     margin: auto
@@ -7,8 +7,8 @@
     justify-content: space-between
     align-items: center
   &__logo
-    width: 175px
-    height: 80px
+    width: 150px
+    // height: 80px
 .navbar
   position: relative
   &__list
@@ -28,3 +28,38 @@
 
 .menu-button
   display: none
+
+.navbar
+  &__dropdown
+    min-width: 160px
+    display: none
+    &--show
+      display: block
+
+.dropdown
+  display: none
+  width: 200px
+  &__link
+    text-decoration: none
+    font-size: 12px
+    color: $primary
+    margin-bottom: 10px
+    border-bottom: 1px solid rgba(25, 60, 88, 0.3)
+
+.show
+  display: flex
+  padding: 14px 20px
+  flex-direction: column
+  position: absolute
+  background-color: #fff
+  z-index: 99
+
+.overlay
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0, 0, 0, 0.6)
+  backdrop-filter: blur(3px)
+  z-index: 5
