--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,6 +1,6 @@
 .hero
   &-container
-    max-width: 1250px
+    max-width: 1200px
     margin: auto
   &__wrapper
     border-radius: 8px
@@ -45,11 +45,11 @@
     color: #fff
     font-style: normal
     font-weight: 600
-    font-size: 30px
+    font-size: 25px
     border-bottom: 1px solid
     border-color: hsla(0,0%,100%,.3)
     margin-bottom: 20px
-    // filter: drop-shadow(15px 10px 14px #183B56)
+    text-shadow: 1px 1px #000
     margin-left: 50px
     margin-right: 50px
 
@@ -60,7 +60,7 @@
     padding: 10px
     font-style: normal
     font-weight: normal
-    font-size: 18px
+    font-size: 14px
     color: hsla(0,0%,100%,1)
     text-decoration: underline
     cursor: pointer
@@ -68,7 +68,7 @@
     border-radius: 4px
     border-width: 0.1px
     border-color: #fff
-    max-width: 170px
+    max-width: 150px
     margin-left: 50px
     background-color: transparent
     box-shadow: none
