--- a/sass/blocks/_main-info.sass
+++ b/sass/blocks/_main-info.sass
@@ -67,3 +67,8 @@
     font-size: 30px
     &:hover
       text-shadow: 0 0 12px #A7211D
+
+.out-num
+  font-size: 70px
+  font-weight: 900
+  margin: 30px
