--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -17,24 +17,24 @@ img
   width: 100%
 
 .swiper-container
-  max-width: 100%
+  width: 92%
   height: 450px
-  border-radius: 8px
 
 .hidden
   overflow: hidden
 .hidden-1
   display: none
+
 @media screen and ( min-width: 992px )
-  .swiper-button-next,
-  .swiper-button-prev
-    outline: none
-    cursor: pointer
-    color: hsla(0,0%,100%,1)
-    // transition: 0.4s
-    &:hover
-      color: $primary
-      box-shadow: 0 0 12px hsla(0,0%,100%,1)
+  // .swiper-button-next,
+  // .swiper-button-prev
+  //   outline: none
+  //   cursor: pointer
+  //   color: hsla(0,0%,100%,1)
+  //   // transition: 0.4s
+  //   &:hover
+  //     color: $primary
+  //     box-shadow: 0 0 12px hsla(0,0%,100%,1)
   a
     outline: none
     cursor: pointer
@@ -47,3 +47,14 @@ img
       outline: none
       box-shadow: 0 0 12px hsla(0,0%,100%,1)
       color: #fff
+
+.overlay
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  width: 100%
+  height: 100%
+  background-color: transparent
+  // backdrop-filter: blur(3px)
+  z-index: 55
