--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -1,6 +1,6 @@
 .about
   padding-top: 77px
-  padding-bottom: 77px
+  padding-bottom: 20px
   &-container
     max-width: 1140px
     margin: auto
@@ -11,58 +11,33 @@
     line-height: 33px
     text-transform: uppercase
     color: $primary
-    text-align: center
-    margin: auto
-    margin-bottom: 50px
+    margin-bottom: 20px
     border-bottom: 1px solid hsla(206, 56, 22 , .3 )
-    max-width: 170px
+    // max-width: 170px
 
   &__wrapper
     display: flex
     justify-content: space-between
-    align-items: center
-    &--images
-      display: flex
-      justify-content: space-between
-      align-items: center
-    &--text
-      max-width: 405px
-      margin-right: 40px
+    align-items: flex-start
+    margin-bottom: 50px
+  &__image
+    flex-basis: 60%
   &__description
-    font-style: normal
-    font-weight: bold
-    font-size: 18px
-    color: #48555B
-    margin-bottom: 30px
+    flex-basis: 40%
     text-align: left
-    min-width: 50%
   &__text
     font-style: normal
-    font-weight: normal
+    font-weight: lighter
     font-size: 15px
     color: #48555B
-    text-justify: distribute
-  &__name
-    color: #2291E6
-    text-transform: uppercase
-  &__image
-    &-wrapper
-      position: relative
-      max-width: 177px
-      height: 224px
-      margin-right: 30px
-      &:last-child
-        margin-right: 0
-  &__link
-    position: absolute
-    top: 25px
-    left: 5px
+    letter-spacing: 1.5px
+  &__button
+    background-color: $primary
     color: #fff
+    padding: 12px
     font-style: normal
     font-weight: 800
     font-size: 14px
-    // line-height: 29px
-    text-transform: uppercase
     text-decoration: none
     cursor: pointer
     &:hover
