--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,10 +1,40 @@
 .hero
   &-container
-    max-width: 1200px
+    // width: 100%
     margin: auto
   &__wrapper
-    border-radius: 8px
-    height: 600px
+    height: 500px
+    background: url('../img/')
+    background-image: url('../img/hero-bg-1.png')
+    background-repeat: no-repeat
+    background-size: cover
+    background-position: top
+    display: flex
+    align-content: center
+    flex-wrap: wrap
+    text-align: left
+    padding: 40px
+  &__title
+    position: relative
+    z-index: 20
+    color: #fff
+    font-style: normal
+    font-weight: 600
+    font-size: 30px
+    border-bottom: 1px solid
+    border-color: hsla(0,0%,100%,.3)
+    margin-bottom: 20px
+    text-shadow: 1px 1px #000
+    flex-basis: 100%
+    // margin-left: 10px
+    // margin-right: 50px
+  &__span
+    display: block
+    flex-basis: 100%
+    color: hsla(0,0%,100%,.7)
+    font-style: normal
+    font-weight: 400
+    font-size: 15px
   &__slide
     position: relative
     &::after
@@ -37,21 +67,6 @@
       display: flex
       flex-direction: column
       justify-content: center
-
-  &__title
-    position: relative
-    z-index: 50
-    padding: 5px
-    color: #fff
-    font-style: normal
-    font-weight: 600
-    font-size: 25px
-    border-bottom: 1px solid
-    border-color: hsla(0,0%,100%,.3)
-    margin-bottom: 20px
-    text-shadow: 1px 1px #000
-    margin-left: 50px
-    margin-right: 50px
 
   &__link
     position: relative
