--- a/sass/style.sass
+++ b/sass/style.sass
@@ -40,5 +40,8 @@
 //styles for contact-page
 @import 'blocks/_contacts'
 
+//styles for contact-page
+@import 'blocks/_methods'
+
 //responsive
 @import '_media'
