--- a/sass/style.sass
+++ b/sass/style.sass
@@ -31,8 +31,8 @@
 //mobile
 @import 'blocks/_breadcrumb'
 
-//main-info
-@import 'blocks/_main-info'
+//company
+@import 'blocks/_company'
 
 //styles for grp, msi and svan
 @import 'blocks/_method'
