--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,7 @@ h1 {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   /* 1 */
   height: 0;
   /* 1 */
@@ -82,8 +81,7 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -230,8 +228,7 @@ fieldset {
  *    `fieldset` elements in all browsers.
  */
 legend {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   color: inherit;
   /* 2 */
@@ -265,8 +262,7 @@ textarea {
  */
 [type="checkbox"],
 [type="radio"] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */
@@ -342,12 +338,10 @@ template {
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  -webkit-font-feature-settings: "locl" 0;
-          font-feature-settings: "locl" 0;
+  font-feature-settings: "locl" 0;
   line-height: 1.7;
 }
 
@@ -386,13 +380,11 @@ img {
     color: #2291E5;
   }
   button {
-    -webkit-transition: 0.4s;
     transition: 0.4s;
   }
   button:hover, button:focus {
     outline: none;
-    -webkit-box-shadow: 0 0 12px white;
-            box-shadow: 0 0 12px white;
+    box-shadow: 0 0 12px white;
     color: #fff;
   }
 }
@@ -415,15 +407,9 @@ img {
 .header-container {
   max-width: 1170px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header__logo {
@@ -438,12 +424,8 @@ img {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .navbar__item {
@@ -487,38 +469,32 @@ img {
 }
 
 .show {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 14px 20px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   position: absolute;
   background-color: #fff;
   z-index: 99;
 }
 
-.hero-container {
-  margin: auto;
-}
-
-.hero__wrapper {
-  height: 500px;
+.hero {
   background: url("../img/");
   background-image: url("../img/hero-bg-1.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
-  display: -webkit-box;
-  display: -ms-flexbox;
+}
+
+.hero-container {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.hero__wrapper {
+  height: 500px;
   display: flex;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  text-align: left;
+  align-content: center;
+  flex-wrap: wrap;
   padding: 40px;
 }
 
@@ -533,14 +509,13 @@ img {
   border-color: rgba(255, 255, 255, 0.3);
   margin-bottom: 20px;
   text-shadow: 1px 1px #000;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
+  max-width: 1200px;
 }
 
 .hero__span {
   display: block;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   color: rgba(255, 255, 255, 0.7);
   font-style: normal;
   font-weight: 400;
@@ -564,52 +539,6 @@ img {
   background: rgba(151, 151, 151, 0.32);
 }
 
-.hero__slide--first {
-  background-image: url("../img/hero-bg-1.png");
-  background-size: cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.hero__slide--second {
-  background-image: url("../img/hero-bg-2.jpg");
-  background-size: cover;
-  background-position: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.hero__slide--third {
-  background-image: url("../img/hero-bg-3.jpg");
-  background-size: cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 .hero__link {
   position: relative;
   z-index: 50;
@@ -628,8 +557,7 @@ img {
   max-width: 150px;
   margin-left: 50px;
   background-color: transparent;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .about {
@@ -654,26 +582,18 @@ img {
 }
 
 .about__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   margin-bottom: 50px;
 }
 
 .about__image {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
+  flex-basis: 60%;
 }
 
 .about__description {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
+  flex-basis: 40%;
   text-align: left;
 }
 
@@ -723,11 +643,9 @@ img {
   line-height: 36px;
   color: #183B56;
   background: rgba(255, 255, 255, 0.76);
-  border-radius: 5px;
   margin-bottom: 30px;
   text-align: center;
-  -webkit-filter: drop-shadow(15px 10px 14px #183B56);
-          filter: drop-shadow(15px 10px 14px #183B56);
+  filter: drop-shadow(15px 10px 14px #183B56);
 }
 
 .subscribe__link {
@@ -815,15 +733,9 @@ img {
 }
 
 .footer__menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .footer__menu-title {
@@ -844,17 +756,13 @@ img {
 }
 
 .footer__info {
-  -ms-flex-preferred-size: 250px;
-      flex-basis: 250px;
+  flex-basis: 250px;
 }
 
 .footer__nav {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (25%)[4];
-      grid-template-columns: repeat(4, 25%);
-  -webkit-column-gap: 15px;
-          column-gap: 15px;
+  grid-template-columns: repeat(4, 25%);
+  column-gap: 15px;
 }
 
 .footer__title {
@@ -890,8 +798,6 @@ img {
   margin-top: 10px;
   font-family: 'Open Sans', sans-serif;
   margin-right: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -916,8 +822,7 @@ img {
   visibility: hidden;
   width: 100%;
   background-color: #FFFFFF;
-  -webkit-box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
-          box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
+  box-shadow: 10px 16px 48px rgba(0, 0, 0, 0.16);
   overflow: hidden;
 }
 
@@ -938,16 +843,9 @@ img {
 }
 
 .mobile__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .mobile__image {
@@ -963,8 +861,6 @@ img {
 }
 
 .breadcrumb-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   list-style: none;
   padding: 15px 0;
@@ -986,109 +882,65 @@ img {
   color: inherit;
 }
 
-.main-info {
+.company {
   padding-top: 20px;
-  padding-bottom: 70px;
+  padding-bottom: 170px;
 }
 
-.main-info__container {
+.company-container {
   max-width: 1170px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: center;
   width: 100%;
 }
 
-.main-info__title {
+.company__title {
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
   text-transform: uppercase;
   color: #183B56;
-  margin-bottom: 30px;
   border-bottom: 1px solid;
+  max-width: max-content;
+  margin: auto;
+  margin-bottom: 20px;
   border-color: rgba(25, 60, 88, 0.2);
 }
 
-.main-info__title--little {
-  font-size: 25px;
-  margin-bottom: 20px;
+.company__image {
+  height: 600px;
+  object-fit: cover;
 }
 
-.main-info__greetings {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  text-transform: uppercase;
-  color: #183B56;
+.company__image-wrapper {
+  max-width: 500px;
 }
 
-.main-info__text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  color: #48555B;
-  text-align: left;
-  margin-top: 30px;
-}
-
-.main-info__right-side {
-  margin-top: -14px;
-  max-width: 350px;
-  margin-left: 40px;
-  background-color: #fafafa;
-  color: #333333;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgba(151, 151, 151, 0.32);
-  border-radius: 3px;
-  padding: 18px;
-}
-
-.main-info__bold {
-  font-weight: 600;
-}
-
-.main-info__employe-wrapper {
-  padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.company__wrapper {
+  position: relative;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 60px;
-  margin-top: 40px;
-  border: 1px solid #A7211D;
-  background-color: #fafafa;
+  justify-content: center;
+  gap: 20px;
 }
 
-.main-info__employe-text {
+.company__text {
   font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
+  font-weight: lighter;
+  font-size: 15px;
   color: #48555B;
-  margin-top: 20px;
+  letter-spacing: 1.5px;
 }
 
-.main-info__numbers {
-  color: #A7211D;
-  font-weight: 600;
-  font-size: 30px;
-}
-
-.main-info__numbers:hover {
-  text-shadow: 0 0 12px #A7211D;
-}
-
-.out-num {
-  font-size: 70px;
-  font-weight: 900;
-  margin: 30px;
+.company__text-wrapper {
+  max-width: 75%;
+  position: absolute;
+  padding: 15px;
+  filter: drop-shadow(1px 1px 10px #183B56);
+  background-color: #fff;
+  height: max-content;
+  bottom: -125px;
+  text-align: center;
 }
 
 .method {
@@ -1156,8 +1008,7 @@ img {
   display: block;
   padding: 10px 20px;
   width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-top: 1px solid #ccc;
   border-right: 1px solid #ccc;
   border-left: 1px solid #ccc;
@@ -1226,25 +1077,18 @@ img {
 
 .contacts__icon {
   width: 30px;
-  -webkit-filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%);
-          filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%);
+  filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(148deg) brightness(55%) contrast(97%);
 }
 
 .contacts__map-blocks {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-basis: 50%;
 }
 
 .contacts__blocks {
   padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  flex-wrap: wrap;
+  align-items: baseline;
   height: 250px;
   border: 1px solid rgba(25, 60, 88, 0.2);
   border-radius: 4px;
@@ -1252,15 +1096,9 @@ img {
 }
 
 .contacts__blocks-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-direction: column;
+  flex-basis: 50%;
   margin-bottom: 20px;
 }
 
@@ -1283,11 +1121,8 @@ img {
   height: 100%;
   margin-top: 30px;
   max-width: 539px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 20px;
   border: 1px solid rgba(25, 60, 88, 0.2);
   margin-top: 30px;
@@ -1298,54 +1133,36 @@ img {
 }
 
 .contacts__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-between;
   gap: 20px;
 }
 
 .contacts__input-group {
   margin-bottom: 5px;
-  -ms-flex-preferred-size: 48%;
-      flex-basis: 48%;
+  flex-basis: 48%;
 }
 
 .contacts__input-group:hover {
-  -webkit-box-shadow: 0 0 7px #183B56;
-          box-shadow: 0 0 7px #183B56;
-  -webkit-transition: 0.3s;
+  box-shadow: 0 0 7px #183B56;
   transition: 0.3s;
 }
 
 .contacts__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  align-items: center;
+  justify-content: space-between;
+  flex-basis: 100%;
 }
 
 .contacts__form-group {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
+  flex-basis: 50%;
   height: 450px;
 }
 
 .contacts__message {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   height: 262px;
   padding: 18px 23px;
   resize: none;
@@ -1397,8 +1214,7 @@ img {
 }
 
 .contacts__button:hover {
-  -webkit-box-shadow: 0 0 12px #193c58;
-          box-shadow: 0 0 12px #193c58;
+  box-shadow: 0 0 12px #193c58;
   color: #183B56;
 }
 
@@ -1438,21 +1254,13 @@ img {
   color: #183B56;
   margin: auto;
   border-bottom: 1px solid rgba(25, 60, 88, 0.3);
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
   max-width: max-content;
 }
 
 .methods-slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
   margin: auto;
   width: 960px;
 }
@@ -1468,8 +1276,7 @@ img {
 }
 
 .methods__text-wrapper {
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
+  flex-basis: 60%;
 }
 
 .methods__text-title {
@@ -1535,23 +1342,16 @@ img {
     height: 500px;
   }
   .about__wrapper {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .about__wrapper--text {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     max-width: 100%;
     margin-right: 0;
   }
   .about__wrapper--images {
     width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     margin-top: 50px;
   }
   .about__description {
@@ -1559,8 +1359,7 @@ img {
     font-size: 18px;
   }
   .footer__nav {
-    -ms-grid-columns: (50%)[2];
-        grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 50%);
     row-gap: 40px;
   }
   .footer__text {
@@ -1571,8 +1370,7 @@ img {
     max-width: 50%;
   }
   .contacts__input-group {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    flex-basis: 100%;
   }
   .contacts__text, .contacts__link {
     font-size: 12px;
@@ -1604,22 +1402,13 @@ img {
     display: none;
   }
   .menu-button {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 16px;
     height: 11px;
     padding: 0;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
     border: none;
     cursor: pointer;
     outline: none;
@@ -1672,10 +1461,7 @@ img {
     max-width: 260px;
   }
   .main-info__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .main-info__right-side {
     margin-top: 20px;
@@ -1692,8 +1478,7 @@ img {
     font-size: 18px;
   }
   .contacts__content {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -1702,9 +1487,7 @@ img {
     margin-right: 0;
   }
   .contacts__address-wrapper {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    justify-content: space-evenly;
   }
   .map {
     width: 100%;
@@ -1774,8 +1557,7 @@ img {
 
 @media (max-width: 476px) {
   .footer__nav {
-    -ms-grid-columns: (250px)[1];
-        grid-template-columns: repeat(1, 250px);
+    grid-template-columns: repeat(1, 250px);
     row-gap: 40px;
   }
   .contacts__title {
@@ -1825,8 +1607,7 @@ img {
     margin-right: 0;
   }
   .about__wrapper--text {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
   }
   .about__link {
     font-size: 11px;
@@ -1840,8 +1621,7 @@ img {
     padding-top: 0;
   }
   .contacts__container {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
   }
   .contacts__button {
     margin-bottom: 10px;
